[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/gui.gd" type="Script" id=1]
[ext_resource path="res://style/def_blue.tres" type="Theme" id=2]
[ext_resource path="res://style/big_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://pack_icons/key.png" type="Texture" id=4]
[ext_resource path="res://levels/level_1/images/hp.png" type="Texture" id=5]
[ext_resource path="res://style/big3_font.tres" type="DynamicFont" id=6]

[sub_resource type="Animation" id=1]
resource_name = "on_bullet"
length = 0.3
tracks/0/type = "method"
tracks/0/path = NodePath("on_bullet")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "show"
}, {
"args": [  ],
"method": "hide"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("on_bullet:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.972549, 0.0823529, 0.0823529, 1 ), Color( 0.972549, 0.0823529, 0.0823529, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "show"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 2.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "show"
}, {
"args": [  ],
"method": "hide"
} ]
}

[node name="gui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="center" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2.5
margin_top = -2.5
margin_right = 2.5
margin_bottom = 2.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="top" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -435.0
margin_top = 9.0
margin_right = 401.0
margin_bottom = 87.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="top"]
margin_left = -499.602
margin_top = -1.06299
margin_right = -376.602
margin_bottom = 118.937
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="top"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -282.0
margin_top = -32.0
margin_right = 292.0
margin_bottom = 7.0
theme = ExtResource( 2 )
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hp_count" type="Label" parent="top"]
margin_left = -348.112
margin_top = 47.189
margin_right = -215.112
margin_bottom = 123.189
custom_fonts/font = ExtResource( 6 )
text = "5"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="alert" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -386.5
margin_top = -79.0
margin_right = 386.5
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="alert"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pack_item" type="TextureRect" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -266.0
margin_top = -245.998
margin_right = -110.0
margin_bottom = -121.998
texture = ExtResource( 4 )
expand = true

[node name="on_bullet" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.972549, 0.0823529, 0.0823529, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/on_bullet = SubResource( 1 )

[node name="message" type="Control" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -330.0
margin_top = 5.0
margin_right = 330.0
margin_bottom = 107.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text" type="Label" parent="message"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="show" type="AnimationPlayer" parent="message"]
anims/show = SubResource( 2 )
